syntax = "proto3";

option java_multiple_files = true;
option java_package = "servicestubs";
import "google/protobuf/timestamp.proto";

package grpcservice;

service VisionFlowFunctionalService {
  //uploads an image file and returns an id
  rpc uploadImage(stream UploadImageRequest) returns (UploadImageResponse);
  //downloads an image file to a path
  rpc downloadImage(DownloadImageRequest) returns (DownloadImageResponse);
  //gets image processing characteristics
  rpc getImageCharacteristics(GetImageCharacteristicsRequest) returns (GetImageCharacteristicsResponse);
  //gets file names based on image characteristics and date range
  rpc getFileNamesByCharacteristic(GetFileNamesRequest) returns (GetFileNamesResponse);
}

//image file to upload
message UploadImageRequest {
  //image name (e.g. cat)
  string name = 1;
  //image content type (e.g. image/jpeg)
  string contentType = 2;
  //image bytes as chunked data
  bytes chunk = 3;
}

//image file uploaded
message UploadImageResponse {
  //image id generated after uploading image file
  string id = 1;
}

//image file to download
message DownloadImageRequest {
  //image id generated after uploading image file
  string id = 1;
  //where to place the image file after downloading
  string path = 2;
}

//image file downloaded
message DownloadImageResponse {
  //image name
  string name = 1;
  //image id to download
  bytes data = 2;
}

//request to get image characteristics based on image id
message GetImageCharacteristicsRequest {
  //image id
  string id = 1;
}

//image processing characteristics
message GetImageCharacteristicsResponse {
  //list of characteristics found in the image
  repeated string characteristics = 1;
  //list of translations corresponding to the characteristics
  repeated string translations = 2;
  //date the image was processed
  google.protobuf.Timestamp date = 3;
}

//request to get file names based on image characteristics
message GetFileNamesRequest {
  //characteristic to search for
  string characteristic = 1;
  //start date to search for
  google.protobuf.Timestamp startDate = 2;
  //end date to search for
  google.protobuf.Timestamp endDate = 3;
}

//file names found based on image processing characteristics query
message GetFileNamesResponse {
  //list of file names found
  repeated string names = 1;
}
